# compiler

./: CMakeLists.txt  Dockerfile  README.md  compiler.cpp  grammar.ebnf
.github/workflows/: cmake.yml
include/: lexer.h  parse_tree.h  parser.h  symbols.h
lexer/: CMakeLists.txt  lexer.cpp  test.cpp
parser/: CMakeLists.txt  parser.cpp  run_test.cmake  test.cpp
parser/tests/: abs  complex_arithmetic  fibonacci  global_variable  hello_world  if_else  print.c  type_conversion  variable_redefinition
symbols/: CMakeLists.txt  operations.cpp  parse_tree.cpp  statements.cpp  symbols.cpp
